syntax = "proto3";

package io.damo.kotlinmonorepo.helloservice.protocol.v2;

option java_multiple_files = true;

service HelloService {
  rpc hello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  optional string name = 1;
}

message HelloReply {
  string greeting = 2;
}
